k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-portal-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: job-portal-server
            port:
              number: 5555
      - path: /
        pathType: Prefix
        backend:
          service:
            name: job-portal-client
            port:
              number: 5137
